--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -1,4 +1,5 @@
 version: '3'
+
 services:
   staging_api:
     container_name: staging_api
@@ -8,12 +9,36 @@ services:
       args:
         build: staging
     restart: always
+    environment:
+      VIRTUAL_HOST: staging.getspotter.io
+      LETSENCRYPT_HOST: staging.getspotter.io
+      LETSENCRYPT_EMAIL: team@getspotter.io
+      VIRTUAL_PORT: 5000
     env_file:
       - .env
     ports:
       - '5000:5000'
     depends_on:
       - db
+
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - '/etc/nginx/vhost.d'
+      - '/usr/share/nginx/html'
+      - '/var/run/docker.sock:/tmp/docker.sock:ro'
+      - '/etc/nginx/certs'
+
+  letsencrypt-nginx-proxy-companion:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    volumes:
+      - '/var/run/docker.sock:/var/run/docker.sock:ro'
+    volumes_from:
+      - 'nginx-proxy'
+
   db:
     container_name: db
     image: mongo
@@ -21,6 +46,7 @@ services:
       - '27017:27017'
     volumes:
       - database:/data/db
+
 volumes:
   database:
     external: true
