--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -30,7 +30,7 @@ services:
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - certs/etc/nginx/certs
+      - certs:/etc/nginx/certs
 
   letsencrypt-nginx-proxy-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
