--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -34,6 +34,8 @@ services:
 
   letsencrypt-nginx-proxy-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
+    environment:
+      NGINX_PROXY_CONTAINER: nginx-proxy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - vhost:/etc/nginx/vhost.d
