using template found on gh

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -23,6 +23,8 @@ services:
 
   nginx-proxy:
     image: jwilder/nginx-proxy
+    labels:
+      com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: 'true'
     ports:
       - '80:80'
       - '443:443'
@@ -30,7 +32,8 @@ services:
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - certs:/etc/nginx/certs
+      - certs:/etc/nginx/certs:ro
+    restart: always
 
   letsencrypt-nginx-proxy-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
@@ -41,6 +44,7 @@ services:
       - vhost:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - certs:/etc/nginx/certs
+    restart: always
 
   db:
     container_name: db
