--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,13 @@ node_js:
   - 12
 
 before_script:
+  - echo $DB
   - cp example.env .env
   - sed -i "s@DB@$DB@T_DB@$T_DB@PORT@$PORT@NODE_ENV@$NODE_ENV@JWT_SECRET@$JWT_SECRET@JWT_EXPIRE@$JWT_EXPIRE@REF_SECRET@$REF_SECRET@MG_DOMAIN@$MG_DOMAIN@MG_KEY@$MG_KEY@" .env
 
 script:
   - docker-compose -f docker-compose.ci.yml up -d
+
+notifications:
+  email:
+    if: branch = master
