debugging env for ci

--- a/example.env
+++ b/example.env
@@ -1,15 +1,15 @@
-DB=
-T_DB=
+DB=FOO_DB
+T_DB=FOO_T_DB
 
-PORT=
+PORT=FOO_PORT
 
-NODE_ENV=
+NODE_ENV=FOO_NODE_ENV
 
-JWT_SECRET=
-JWT_EXPIRE=
+JWT_SECRET=FOO_JWT_SECRET
+JWT_EXPIRE=FOO_JWT_EXPIRE
 
-REF_SECRET=
-REF_EXPIRE=
+REF_SECRET=FOO_REF_SECRET
+REF_EXPIRE=FOO_REF_EXPIRE
 
-MG_DOMAIN=
-MG_KEY=
+MG_DOMAIN=FOO_MG_DOMAIN
+MG_KEY=FOO_MG_KEY
