--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,7 @@ node_js:
 before_script:
   - echo $DB
   - cp example.env .env
-  - sed -i "s@DB@$DB@T_DB@$T_DB@PORT@$PORT@NODE_ENV@$NODE_ENV@JWT_SECRET@$JWT_SECRET@JWT_EXPIRE@$JWT_EXPIRE@REF_SECRET@$REF_SECRET@MG_DOMAIN@$MG_DOMAIN@MG_KEY@$MG_KEY@" .env
+  - sed -i "s@FOO_DB@$DB@FOO_T_DB@$T_DB@FOO_PORT@$PORT@FOO_NODE_ENV@$NODE_ENV@FOO_JWT_SECRET@$JWT_SECRET@FOO_JWT_EXPIRE@$JWT_EXPIRE@FOO_REF_SECRET@$REF_SECRET@FOO_MG_DOMAIN@$MG_DOMAIN@FOO_MG_KEY@$MG_KEY@" .env
 
 script:
   - docker-compose -f docker-compose.ci.yml up -d
-
-notifications:
-  email:
-    if: branch = master
