change sed to echo

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,17 @@ node_js:
   - 12
 
 before_script:
-  - cp example.env .env
-  - sed -i "s@FOO_DB@"'$DB'";s@FOO_T_DB@"'$T_DB'";s@FOO_PORT@"'$PORT'";@FOO_NODE_ENV@"'$NODE_ENV'";@FOO_JWT_SECRET@"'$JWT_SECRET'";@FOO_JWT_EXPIRE@"'$JWT_EXPIRE'";@FOO_REF_SECRET@"'$REF_SECRET'";@FOO_MG_DOMAIN@"'$MG_DOMAIN'";@FOO_MG_KEY@"'$MG_KEY'"@" .env
+  - touch .env
+  - echo DB=$DB >> .env
+  - echo T_DB=$T_DB >> .env
+  - echo PORT=$PORT >> .env
+  - echo NODE_ENV=$NODE_ENV >> .env
+  - echo JWT_SECRET=$JWT_SECRET >> .env
+  - echo JWT_EXPIRE=$JWT_EXPIRE >> .env
+  - echo REF_SECRET=$REF_SECRET >> .env
+  - echo REF_EXPIRE=$REF_EXPIRE >> .env
+  - echo MG_DOMAIN=$MG_DOMAIN >> .env
+  - echo MG_KEY=$MG_KEY >> .env
 
 script:
   - docker-compose -f docker-compose.ci.yml up -d
