--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "ts-node-dev": "^1.0.0-pre.44"
   },
   "nyc": {
+    "lines": 80,
     "extends": "@istanbuljs/nyc-config-typescript",
     "extension": [
       ".ts"
