testing detached mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,4 @@ before_script:
   - echo COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN >> .env
 
 script:
-  - docker-compose -f docker-compose.ci.yml up
-  - docker-compose-f docker-compose.ci.yml down
+  - docker-compose -f docker-compose.ci.yml up -d
