--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
   - echo MG_DOMAIN=$MG_DOMAIN >> .env
   - echo MG_KEY=$MG_KEY >> .env
   - echo COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN >> .env
+  - chmod +x health_check.sh
 
 script:
   - docker-compose -f docker-compose.ci.yml up -d
