--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ after_script:
   - docker-compose -f docker-compose.ci.yml down
 
 deploy:
+  skip_cleanup: true
   - provider: script
     script: deploy.sh
     on:
