--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -9,6 +9,7 @@ services:
       args:
         build: start
     restart: always
+    image: danbergelt/prod_api:latest
     environment:
       VIRTUAL_HOST: api.getspotter.io
       LETSENCRYPT_HOST: api.getspotter.io
