--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     volumes:
-      - /usr/src/app
+      - .:/usr/src/app
     restart: always
     env_file:
       - .env
