--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
+    "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
@@ -78,6 +79,7 @@
     "morgan": "^1.9.1",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
+    "sinon": "^9.0.1",
     "source-map-support": "^0.5.16",
     "ts-mocha": "^6.0.0",
     "ts-node-dev": "^1.0.0-pre.44"
