--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
     "hpp": "^0.2.3",
+    "http-status-codes": "^1.4.0",
     "husky": "^4.2.0",
     "is-hexcolor": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
