--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lint-staged": "^10.0.2",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.7.4",
+    "mongoose-unique-validator": "^2.0.3",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4",
     "xss-clean": "^0.1.1"
@@ -41,25 +42,26 @@
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/chai": "^4.2.7",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/chai-http": "^4.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.2",
     "@types/express-mongo-sanitize": "^1.3.1",
     "@types/express-rate-limit": "^3.3.3",
     "@types/helmet": "^0.0.45",
     "@types/hpp": "^0.2.1",
     "@types/jsonwebtoken": "^8.3.5",
-    "@types/mailgun-js": "^0.22.3",
-    "@types/mongoose": "^5.5.36",
-    "@types/node": "^13.1.1",
-    "@types/chai": "^4.2.7",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/chai-http": "^4.2.0",
-    "@types/expect": "^24.3.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/mailgun-js": "^0.22.3",
     "@types/mocha": "^5.2.7",
+    "@types/mongoose": "^5.5.36",
+    "@types/mongoose-unique-validator": "^1.0.3",
     "@types/morgan": "^1.7.37",
+    "@types/node": "^13.1.1",
     "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
