--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.1.1",
     "@types/sinon": "^9.0.0",
+    "@types/sinon-express-mock": "^1.3.8",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
@@ -83,6 +84,7 @@
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "sinon": "^9.0.1",
+    "sinon-express-mock": "^2.2.1",
     "source-map-support": "^0.5.16",
     "ts-mocha": "^6.0.0",
     "ts-node-dev": "^1.0.0-pre.44"
