--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es2020",
     "module": "commonjs",
     "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
-    "types": ["module"],
+    "types": ["module", "mocha"],
     "sourceMap": true,
     "outDir": "./dist",
     "rootDir": ".",
