--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "ramda": "^0.27.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "yup": "^0.28.3"
   },
   "scripts": {
-    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/unit/success.test.ts --exit",
+    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/unit/tc.test.ts --exit",
     "coverage": "TESTING=true NODE_ENV=test nyc npm test && nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
     "start": "NODE_ENV=production ts-node --transpile-only --files src/index",
     "staging": "NODE_ENV=production STAGING=true ts-node --transpile-only --files src/index",
@@ -64,6 +65,7 @@
     "@types/ramda": "^0.27.3",
     "@types/sinon": "^9.0.0",
     "@types/sinon-express-mock": "^1.3.8",
+    "@types/yup": "^0.26.36",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "chai": "^4.2.0",
