--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "@types/pg": "^7.14.3",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.4",
@@ -31,13 +32,14 @@
     "mongodb": "^3.5.6",
     "mongoose": "^5.7.4",
     "mongoose-unique-validator": "^2.0.3",
+    "pg": "^8.2.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4",
     "xss-clean": "^0.1.1",
     "yup": "^0.28.3"
   },
   "scripts": {
-    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/**/**/*.test.ts --exit",
+    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/**/**/authenticate.test.ts --exit",
     "coverage": "TESTING=true NODE_ENV=test nyc npm test && nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
     "start": "NODE_ENV=production ts-node --transpile-only --files src/index",
     "staging": "NODE_ENV=production STAGING=true ts-node --transpile-only --files src/index",
