:white_check_mark: new decoders tested

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,7 @@
     "rootDir": ".",
     "moduleResolution": "node",
     "removeComments": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": true,
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
