--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongodb": "^3.5.6",
     "mongoose": "^5.7.4",
     "mongoose-unique-validator": "^2.0.3",
+    "monocle-ts": "^2.1.0",
+    "newtype-ts": "^0.3.4",
     "pg": "^8.2.1",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4",
@@ -39,7 +41,7 @@
     "yup": "^0.28.3"
   },
   "scripts": {
-    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/**/**/pg.test.ts --exit",
+    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/**/**/decoders.test.ts --exit",
     "coverage": "TESTING=true NODE_ENV=test nyc npm test && nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
     "start": "NODE_ENV=production ts-node --transpile-only --files src/index",
     "staging": "NODE_ENV=production STAGING=true ts-node --transpile-only --files src/index",
