--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
-    "fp-ts": "^2.5.3",
+    "fp-ts": "^2.6.7",
     "helmet": "^3.21.2",
     "hpp": "^0.2.3",
     "http-status-codes": "^1.4.0",
@@ -35,6 +35,7 @@
     "monocle-ts": "^2.1.0",
     "newtype-ts": "^0.3.4",
     "pg": "^8.2.1",
+    "ramda": "^0.27.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4",
     "xss-clean": "^0.1.1",
