--- a/package.json
+++ b/package.json
@@ -35,14 +35,13 @@
     "monocle-ts": "^2.1.0",
     "newtype-ts": "^0.3.4",
     "pg": "^8.2.1",
-    "ramda": "^0.27.0",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.4",
+    "typescript": "^3.9.6",
     "xss-clean": "^0.1.1",
     "yup": "^0.28.3"
   },
   "scripts": {
-    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/integration/services/authorize.test.ts --exit",
+    "test": "TESTING=true NODE_ENV=test ts-mocha -p tsconfig.json  src/test/**/**/io.test.ts --exit",
     "coverage": "TESTING=true NODE_ENV=test nyc npm test && nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
     "start": "NODE_ENV=production ts-node --transpile-only --files src/index",
     "staging": "NODE_ENV=production STAGING=true ts-node --transpile-only --files src/index",
@@ -70,7 +69,6 @@
     "@types/mongoose-unique-validator": "^1.0.3",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.1.1",
-    "@types/ramda": "^0.27.3",
     "@types/sinon": "^9.0.0",
     "@types/sinon-express-mock": "^1.3.8",
     "@types/yup": "^0.26.36",
